# cctv-inference

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
cctv_inference/process_cctv/: __main__.py  config.yaml  config_full.yaml  config_min.yaml  frame_management.py  model_loading.py
cctv_inference/utils/: __init__.py  yaml_config.py
cyclist_census/: config.py
cyclist_census/process_cctv/: __init__.py  __main__.py  cctv_processing.py  config.yaml  config_min.yaml  frame_annotation.py  line_counter.py  types.py
cyclist_census/utils/: classification.py  inference.py
docs/: mkdocs.yml
docs/docs/: index.md
